--- a/.github/workflows/lambda_zip.yml
+++ b/.github/workflows/lambda_zip.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
   BUILD_TARGET: x86_64-unknown-linux-musl
   BINARY_NAME: bootstrap
-  BOTO_ENVIRONMENT: dev
+  JWTAUTH_ENVIRONMENT: dev
 
 jobs:
   build:
